# OpenKiwi

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  IMPLEMENTATION_REPORT.md
scripts/: build-release.mjs  bump-version.mjs  prepare-release.mjs  publish-release.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ApprovalCenter.test.tsx  ApprovalCenter.tsx  ChatTimeline.test.tsx  ChatTimeline.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Composer.test.tsx  Composer.tsx  ErrorBoundary.tsx  FileBrowser.test.tsx  FileBrowser.tsx  HarnessSettings.tsx  ModelPowerControl.test.tsx  ModelPowerControl.tsx  OnboardingModal.test.tsx  OnboardingModal.tsx  OpenRouterModelControl.tsx  RowMenu.tsx  RuntimeModals.tsx  SettingsModal.test.tsx  SettingsModal.tsx  SkillLibrary.test.tsx  SkillLibrary.tsx  StudioDock.test.tsx  StudioDock.tsx  WorkflowManager.test.tsx  WorkflowManager.tsx  XtermPanel.tsx
src/hooks/: useCodexEvents.ts  usePaneResize.test.ts  usePaneResize.ts  useScheduler.ts  useTerminal.ts  useWorkflowEngine.test.ts  useWorkflowEngine.ts
src/lib/: appConfig.ts  appUpdater.test.ts  appUpdater.ts  codex.ts  codexEvents.test.ts  codexEvents.ts  costLedger.test.ts  costLedger.ts  errorLog.ts  errors.test.ts  errors.ts  onboarding.ts  skills.test.ts  skills.ts  storage.test.ts  storage.ts  taskStore.test.ts  taskStore.ts  threadList.ts  (+16 more)
(+1 files in other folders)
